--- a/src/abyssinia/templates/abyssinia/confirm.html
+++ b/src/abyssinia/templates/abyssinia/confirm.html
@@ -15,43 +15,43 @@
             <form action="https://testsecureacceptance.cybersource.com/pay" method="post">
                 <div class="form-group">
                     <label>access_key:</label>
-                    <input type="text" class="form-control" name="access_key" value="<%= access_key %>" autocomplete="off">
+                    <input type="text" class="form-control" name="access_key" value={{access_key}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>profile_id:</label>
-                    <input type="text" class="form-control" name="profile_id" value="<%= profile_id %>" autocomplete="off">
+                    <input type="text" class="form-control" name="profile_id" value={{profile_id}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>transaction_uuid:</label>
-                    <input type="text" class="form-control" name="transaction_uuid" value="<%= transaction_uuid %>" autocomplete="off">
+                    <input type="text" class="form-control" name="transaction_uuid" value={{transaction_uuid}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>reference_number:</label>
-                    <input type="text" class="form-control" name="reference_number" value="<%= reference_number %>" autocomplete="off">
+                    <input type="text" class="form-control" name="reference_number" value={{reference_number}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>unsigned_field_names:</label>
-                    <input type="text" class="form-control" name="unsigned_field_names" value="<%= unsigned_field_names %>" autocomplete="off">
+                    <input type="text" class="form-control" name="unsigned_field_names" value={{unsigned_field_names}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>amount:</label>
-                    <input type="text" class="form-control" name="amount" value="<%= amount %>" autocomplete="off">
+                    <input type="text" class="form-control" name="amount" value={{amount}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>signed_field_names:</label>
-                    <input type="text" class="form-control" name="signed_field_names" value="<%= signed_field_names %>" autocomplete="off">
+                    <input type="text" class="form-control" name="signed_field_names" value={{signed_field_names}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>signed_date_time:</label>
-                    <input type="text" class="form-control" name="signed_date_time" value="<%= signed_date_time %>" autocomplete="off">
+                    <input type="text" class="form-control" name="signed_date_time" value={{signed_date_time}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>currency:</label>
-                    <input type="text" class="form-control" name="currency" value="<%= currency %>" autocomplete="off">
+                    <input type="text" class="form-control" name="currency" value={{currency}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>signature:</label>
-                    <input type="text" class="form-control" name="signature" value="<%= signature %>" autocomplete="off">
+                    <input type="text" class="form-control" name="signature" value={{signature}} autocomplete="off">
                 </div>
                 <div class="form-group">
                     <input type="submit" class="btn btn-info" value="Confirm"/>
