--- a/src/abyssinia/templates/abyssinia/index.html
+++ b/src/abyssinia/templates/abyssinia/index.html
@@ -20,7 +20,7 @@
           <h4>CyberSource-SA Hosted Checkout</h4>
 
           <form class="mt-4"
-            action="http://localhost:3000/"
+            action="http://localhost:8000/boa/index"
             method="post"
            
           >
