added abysiinia basic

--- a/src/abyssinia/templates/abyssinia/confirm.html
+++ b/src/abyssinia/templates/abyssinia/confirm.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="form-group">
                     <label>unsigned_field_names:</label>
-                    <input type="text" class="form-control" name="unsigned_field_names" value={{unsigned_field_names}} autocomplete="off">
+                    <input type="text" class="form-control" name="unsigned_field_names" value={{unsigned_field_names}}>
                 </div>
                 <div class="form-group">
                     <label>amount:</label>
